Complete navigation section structure & design

--- a/index.html
+++ b/index.html
@@ -15,7 +15,29 @@
   <body>
     <header class="header">
       <img class="logo" src="img/omnifood-logo.png" alt="Foodie logo" />
-      <nav class="main-nav">Navigation</nav>
+      <nav class="main-nav">
+        <ul class="main-nav-list">
+            <li>
+              <a class="main-nav-link" href="#">Home</a>
+            </li>
+            <li>
+              <a class="main-nav-link" href="#">About</a>
+            </li>
+            <li>
+              <a class="main-nav-link" href="#">Menu</a>
+            </li>
+            <li>
+              <a class="main-nav-link" href="#">Blog</a>
+            </li>
+            <li>
+              <a class="main-nav-link" href="#">Contact</a>
+            </li>
+            <li>
+              <a class="main-nav-link nav-cta" href="#">Sign in</a>
+            </li>
+          </ul>
+        </ul>
+      </nav>
     </header>
 
     <main>
