--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
           </h2>
         </div>
         <!-- * STEP-01 -->
-        <div class="container grid grid--2-cols">
+        <div class="container grid grid--2-cols grid--center-vertically">
           <div class="step-text-box">
             <p class="step-number">01</p>
             <h3 class="heading-tertiary">
@@ -108,11 +108,11 @@
               class="step-img"
             />
           </div>
-        </div>
-        <!-- * STEP-01 -->
 
-        <!-- * STEP-02 -->
-        <div class="container grid grid--2-cols">
+          <!-- * STEP-01 -->
+
+          <!-- * STEP-02 -->
+
           <div class="step-img-box">
             <img
               src="img/app/app-screen-2.png"
@@ -129,11 +129,11 @@
               your own recipes.
             </p>
           </div>
-        </div>
-        <!-- * STEP-02 -->
 
-        <!-- * STEP-03 -->
-        <div class="container grid grid--2-cols">
+          <!-- * STEP-02 -->
+
+          <!-- * STEP-03 -->
+
           <div class="step-text-box">
             <p class="step-number">03</p>
             <h3 class="heading-tertiary">Receive meals at convenient time</h3>
