Testing code in lua

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -212,7 +212,9 @@
               alt="Avocado salad"
             />
             <p class="meal-title">Avocado Salad</p>
+            <p>Deleting the vim coding style</p>
           </div>
+
           <div class="list">List of diets</div>
         </div>
       </section>
@@ -221,3 +223,4 @@
     <script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
   </body>
 </html>
+-- Starting a server -- Starting a server
