--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
 
     <title>Foodie</title>
   </head>
@@ -212,7 +212,8 @@
               alt="Avocado salad"
             />
             <p class="meal-title">Avocado Salad</p>
-            <p>Deleting the vim coding style</p>
+
+            <p id="testing-code">Here is the test</p>
           </div>
 
           <div class="list">List of diets</div>
@@ -223,4 +224,3 @@
     <script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
   </body>
 </html>
--- Starting a server -- Starting a server
