--- a/index.html
+++ b/index.html
@@ -188,22 +188,26 @@
               class="meal-img"
               alt="Japanese Gyozas"
             />
-            <span class="tag">Vegetarian</span>
-            <p class="meal-title">Japanese Gyozas</p>
-            <ul class="meal-attributes">
-              <li class="meal-attribute">
-                <ion-icon name="flame"></ion-icon>
-                <span>650 calories</span>
-              </li>
-              <li class="meal-attribute">
-                <ion-icon name="restaurant"></ion-icon>
-                <span>NutriScore &reg; 74</span>
-              </li>
-              <li class="meal-attribute">
-                <ion-icon name="star-outline"></ion-icon>
-                <span>4.9 rating (537)</span>
-              </li>
-            </ul>
+            <div class="meal-content">
+              <div class="meal-tags">
+                <span class="tag tag--vegetarian">Vegetarian</span>
+              </div>
+              <p class="meal-title">Japanese Gyozas</p>
+              <ul class="meal-attributes">
+                <li class="meal-attribute">
+                  <ion-icon class="meal-icon" name="flame"></ion-icon>
+                  <span><strong>650 </strong>calories</span>
+                </li>
+                <li class="meal-attribute">
+                  <ion-icon class="meal-icon" name="restaurant"></ion-icon>
+                  <span>NutriScore &reg; <strong>74</strong></span>
+                </li>
+                <li class="meal-attribute">
+                  <ion-icon class="meal-icon" name="star-outline"></ion-icon>
+                  <span> <strong> 4.9 </strong>rating (537)</span>
+                </li>
+              </ul>
+            </div>
           </div>
           <div class="meal">
             <img
@@ -211,9 +215,27 @@
               class="meal-img"
               alt="Avocado salad"
             />
-            <p class="meal-title">Avocado Salad</p>
-
-            <p id="testing-code">Here is the test</p>
+            <div class="meal-content">
+              <div class="meal-tags">
+                <span class="tag tag--vegan">Vegan</span>
+                <span class="tag tag--paleo">Paleo</span>
+              </div>
+              <p class="meal-title">Avocado Salad</p>
+              <ul class="meal-attributes">
+                <li class="meal-attribute">
+                  <ion-icon class="meal-icon" name="flame"></ion-icon>
+                  <span><strong>400</strong> calories</span>
+                </li>
+                <li class="meal-attribute">
+                  <ion-icon class="meal-icon" name="restaurant"></ion-icon>
+                  <span>NutriScore &reg; <strong>92</strong></span>
+                </li>
+                <li class="meal-attribute">
+                  <ion-icon class="meal-icon" name="star-outline"></ion-icon>
+                  <span> <strong> 4.8 </strong>rating (441)</span>
+                </li>
+              </ul>
+            </div>
           </div>
 
           <div class="list">List of diets</div>
