--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
             Eating well without breaking the bank
           </h2>
         </div>
-        <div class="container grid grid--2-cols">
+        <div class="container grid grid--2-cols margin-bottom-md">
           <div class="pricing-plan pricing-plan--starter">
             <header class="plan-header">
               <p class="plan-name">Starter</p>
@@ -486,6 +486,12 @@
             </div>
           </div>
         </div>
+        <div class="container grid">
+          <aside class="plan-details">
+            Prices include all applicable taxes. You can cancel at any time.
+            Both plans include the following:
+          </aside>
+        </div>
         <div class="container grid grid--4-cols">
           <div class="feature">
             <ion-icon class="feature-icon" name="infinite"></ion-icon>
@@ -496,7 +502,7 @@
             </p>
           </div>
           <div class="feature">
-            <ion-icon class="feature-icon" name="infinite"></ion-icon>
+            <ion-icon class="feature-icon" name="nutrition"></ion-icon>
             <p class="feature-title">Local and organic</p>
             <p class="feature-text">
               Our cooks only use local, fresh, and organic products to prepare
@@ -504,7 +510,7 @@
             </p>
           </div>
           <div class="feature">
-            <ion-icon class="feature-icon" name="infinite"></ion-icon>
+            <ion-icon class="feature-icon" name="leaf"></ion-icon>
             <p class="feature-title">No waste</p>
             <p class="feature-text">
               All our partners only use reusable containers to package all your
@@ -512,7 +518,7 @@
             </p>
           </div>
           <div class="feature">
-            <ion-icon class="feature-icon" name="infinite"></ion-icon>
+            <ion-icon class="feature-icon" name="pause"></ion-icon>
             <p class="feature-title">Pause anytime</p>
             <p class="feature-text">
               Going on vacation? Just pause your subscription, and we refund
