Testing lazy git
Testing lazygit plugin

--- a/index.html
+++ b/index.html
@@ -477,6 +477,7 @@
                 <span>Get access to latest recipes</span>
               </li>
             </ul>
+            <p>Hello world</p>
             <div class="plan-sign-up">
               <a href="#" class="btn btn--full">Start eating well</a>
             </div>
