testing lazy git
Testing

--- a/index.html
+++ b/index.html
@@ -453,6 +453,7 @@
             </div>
           </div>
 
+          <p>Hello world</p>
           <div class="pricing-plan">
             <header class="plan-header">
               <p class="plan-name">Complete</p>
