--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
           </h2>
         </div>
         <div class="container grid grid--2-cols">
-          <div class="pricing-plan">
+          <div class="pricing-plan pricing-plan--starter">
             <header class="plan-header">
               <p class="plan-name">Starter</p>
               <p class="plan-price"><span>$</span>399</p>
@@ -453,7 +453,7 @@
             </div>
           </div>
 
-          <div class="pricing-plan">
+          <div class="pricing-plan pricing-plan--complete">
             <header class="plan-header">
               <p class="plan-name">Complete</p>
               <p class="plan-price"><span>$</span>649</p>
