--- a/index.html
+++ b/index.html
@@ -441,11 +441,15 @@
               </li>
               <li class="list-item">
                 <ion-icon class="list-icon" name="checkmark"></ion-icon>
-                <span>Order times are between 11am and 9pm</span>
+                <span>Order from 11am and 9pm</span>
               </li>
               <li class="list-item">
                 <ion-icon class="list-icon" name="checkmark"></ion-icon>
                 <span>Delivery is free</span>
+              </li>
+              <li class="list-item">
+                <ion-icon class="list-icon" name="close"></ion-icon>
+                <span>Get access to latest recipes</span>
               </li>
             </ul>
             <div class="plan-sign-up">
@@ -462,11 +466,11 @@
             <ul class="list">
               <li class="list-item">
                 <ion-icon class="list-icon" name="checkmark"></ion-icon>
-                <span>2 meals per day</span>
+                <span><strong>2 meals </strong>per day</span>
               </li>
               <li class="list-item">
                 <ion-icon class="list-icon" name="checkmark"></ion-icon>
-                <span>Order 24/7</span>
+                <span> Order <strong>24/7</strong> </span>
               </li>
               <li class="list-item">
                 <ion-icon class="list-icon" name="checkmark"></ion-icon>
