--- a/index.html
+++ b/index.html
@@ -530,7 +530,52 @@
       <section class="section-cta">
         <div class="container">
           <div class="cta">
-            <div class="cta-text-box">CTA</div>
+            <div class="cta-text-box">
+              <h2 class="heading-secondary">Get your first meal for free!</h2>
+              <p class="cta-text">
+                Healthy, tasty and hassle-free meals are waiting for you. Start
+                eating well today. You can cancel or pause anytime. And the
+                first meal is on us!
+              </p>
+              <form class="cta-form" action="#">
+                <div>
+                  <label for="full-name">Full Name</label>
+                  <input
+                    required
+                    type="text"
+                    name="full-name"
+                    id="full-name"
+                    value=""
+                    placeholder="John Smith"
+                  />
+                </div>
+
+                <div>
+                  <label for="email">Email address</label>
+                  <input
+                    required
+                    type="email"
+                    name="email"
+                    id="email"
+                    value=""
+                    placeholder="email@mail.com"
+                  />
+                </div>
+                <div>
+                  <label for="select-where">Where did you hear from us?</label>
+                  <select id="select-where" required>
+                    <option value="">Please choose one option</option>
+                    <option value="friends">Friends and family</option>
+                    <option value="youtube">Youtube Ads</option>
+                    <option value="podcast">Podcast</option>
+                    <option value="facebook">Facebook Ad</option>
+                    <option value="others">Others</option>
+                  </select>
+                </div>
+
+                <button class="btn" type="submit">Sign up now</button>
+              </form>
+            </div>
             <div
               class="cta-img-box"
               role="img"
