--- a/index.html
+++ b/index.html
@@ -22,22 +22,19 @@
       <nav class="main-nav">
         <ul class="main-nav-list">
           <li>
-            <a class="main-nav-link" href="#">Home</a>
+            <a class="main-nav-link" href="#">How it works</a>
           </li>
           <li>
-            <a class="main-nav-link" href="#">About</a>
+            <a class="main-nav-link" href="#">Meals</a>
           </li>
           <li>
-            <a class="main-nav-link" href="#">Menu</a>
+            <a class="main-nav-link" href="#">Testimonials</a>
           </li>
           <li>
-            <a class="main-nav-link" href="#">Blog</a>
+            <a class="main-nav-link" href="#">Pricing</a>
           </li>
           <li>
-            <a class="main-nav-link" href="#">Contact</a>
-          </li>
-          <li>
-            <a class="main-nav-link nav-cta" href="#">Sign in</a>
+            <a class="main-nav-link nav-cta" href="#">Try for free</a>
           </li>
         </ul>
       </nav>
