--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <title>Foodie</title>
   </head>
   <body>
-    <header class="header">
+    <header class="header nav-open">
       <a href="#">
         <img class="logo" src="img/omnifood-logo.png" alt="Foodie logo" />
       </a>
@@ -39,6 +39,11 @@
           </li>
         </ul>
       </nav>
+
+      <button class="btn-mobile-nav">
+        <ion-icon class="icon-mobile-nav" name="menu"></ion-icon>
+        <ion-icon class="icon-mobile-nav" name="close"></ion-icon>
+      </button>
     </header>
 
     <main>
